# evlens

./: .gitignore  Makefile  README.md  pyproject.toml
cloud/: README.md  bq_plugshare_checkinsTable_config.json  bq_plugshare_evseTable_config.json  bq_plugshare_locationIDTable_config.json  bq_plugshare_schema.erd  bq_plugshare_schema.erd.json  bq_plugshare_searchTilesTable_NREL_config.json  bq_plugshare_searchTilesTable_config.json  bq_plugshare_stationsTable_config.json  setup_gcloud_cli_mac_chipset.sh  setup_scraping_VM.md
docker/: Dockerfile
docker/scraping/: Dockerfile  docker-compose.yml
docs/: Makefile  conf.py  index.rst  make.bat
evlens/: __init__.py  concurrency.py  config.py  logs.py  pytorch_tools.py
evlens/data/: gemini_scraper.py  google_cloud.py  markets.py  nrel_api.py  plugshare.py  routing.py  selenium_project_Plugshare.side
evlens/models/: openai_tools.py
evlens/visualization/: folium_tools.py
notebooks/: .codecarbon.config  0.1-DWRM-PlugshareScraping.ipynb  0.2-DWRM-PlugshareLocationScraping.ipynb  1.0-DWRM-GPTV_Testing.ipynb  1.1-DWRM-MarketAnalysis.ipynb  2.0-DWRM-CodeCarbontesting.ipynb
notebooks/exploratory/: 0.1-DWRM-PlugshareScraping.ipynb  0.2-DWRM-PlugshareLocationScraping.ipynb  0.3-DWRM-GCloud.ipynb  1.0-DWRM-GPTV_Testing.ipynb  1.1-DWRM-MarketAnalysis.ipynb  1.2-DWRM-SimpleRAG.ipynb  1.2-DWRM-SmartcarAPI.ipynb  2.0-DWRM-CodeCarbontesting.ipynb  2.0-DWRM-simpleRouting.ipynb
roadtrip/: __init__.py  concurrency.py  logs.py
roadtrip/data/: google_cloud.py  nrel_api.py  plugshare.py
roadtrip/models/: openai_tools.py
scripts/: get_checkpoint_locations_by_worker.sh  parse_plugshare.py  plugshare.py  plugshareRequests.py  plugshareTest.py  scrape_location_ids.py  setup_gcloud_cli_mac_chipset.sh  setup_scraping_VM.sh
tests/: test_bigquery.py  test_devembedmap_scraping.py  test_devembedmap_scraping_headless.py  test_devembedmap_scraping_parallelized.py  test_login_exiting.py  test_mainmap_scraping.py  test_mainmap_scraping_not_headless.py  test_mainmap_scraping_parallelized.py  test_scraping.py  test_scraping_not_headless.py  test_scraping_not_headless_parallelized.py  test_scraping_parallelized.py  test_selenium.py  test_selenium_cookie_dialog.py
