[tool.poetry]
name = "evlens"
version = "0.1.0"
description = ""
authors = ["Dave Rench McCauley <11720378+emigre459@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
coverage = "^7.3.3"
flake8 = "^6.1.0"
python-dotenv = "*"
sphinx = "^7.2.6"
pandas = "^2.1.4"
openai = "^1.6.0"
rich = "^13.7.0"
pillow = "^10.1.0"
llama-index = {extras = ["query-tools"], version = "^0.9.34"}
pyarrow = "^15.0.0"
ipykernel = "^6.29.0"
pypdf = "^4.0.0"
chromadb = "^0.4.22"
transformers = "^4.37.1"
torch = "^2.1.2"
selenium = "^4.17.2"
beautifulsoup4 = "^4.12.3"
codecarbon = "^2.3.4"
dash = "^2.15.0"
dash-bootstrap-components = "^1.5.0"
fire = "^0.5.0"
google-generativeai = "^0.6.0"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
