[tool.poetry]
name = "evlens"
version = "0.1.0"
description = ""
authors = ["Dave Rench McCauley <11720378+emigre459@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
coverage = "^7.3.3"
flake8 = "^6.1.0"
python-dotenv = "*"
sphinx = "^7.2.6"
pandas = "^2.1.4"
openai = "^1.6.0"
rich = "^13.7.0"
pillow = "^10.1.0"
ipykernel = "^6.29.0"
pypdf = "^4.0.0"
transformers = "^4.37.1"
torch = "^2.1.2"
beautifulsoup4 = "^4.12.3"
google-generativeai = "^0.6.0"
chardet = "^5.2.0"
pytest = "^8.2.2"
selenium = "^4.21.0"
ray = {extras = ["default"], version = "^2.31.0"}
cython = "^3.0.10"
ipywidgets = "^8.1.3"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
